--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,4 +3,4 @@
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}. შესრულებულია Jekyll-ის გამოყენებით, <a href="https://github.com/avtotrainer/simple_blog">ᲨᲐᲑᲚᲝᲜᲘ</a> theme.
   </span>
 </footer>
-</div>>
+</div>
