--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,7 @@
     </a>
     <ul>
       <li><a href="{{ site.baseurl }}/">ᲞᲝᲡᲢᲔᲑᲘ</a></li>
+      <li><a href="{{ '/blog' | prepend: site.baseurl }}">ბლოგი</a></li>
       <li><a href="{{ '/about' | prepend: site.baseurl }}">ᲩᲔᲛᲡ ᲨᲔᲡᲐᲮᲔᲑ</a></li>
     </ul>
   </div>
