--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,9 +4,13 @@
       <h2 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul class="nav-list">
-      <li class="nav-item"><a href="{{ site.baseurl }}/">ᲞᲝᲡᲢᲔᲑᲘ</a></li>
-      <li class="nav-item"><a href="{{ '/blog' | prepend: site.baseurl }}">ᲑᲚᲝᲒᲘ</a></li>
-      <li class="nav-item"><a href="{{ '/about' | prepend: site.baseurl }}">ᲩᲔᲛᲡ ᲨᲔᲡᲐᲮᲔᲑ</a></li>
+      {% for link in site.links %}
+      {% if  link.external %}
+      <li class="nav-item"><a href="{{ link.url }}/">{{ link.title}}</a></li>
+      {% else %}
+      <li class="nav-item"><a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a></li>
+      {% endif %}
+      {% endfor %}
     </ul>
   </div>
 </nav>
