--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -9,6 +9,7 @@ $white: #fff !default;
 $blue: #4a9ae1 !default;
 $shadow-color: rgba(0, 0, 0, .2) !default;
 $code-color: #bf616a !default;
+// ჰედერი და ფუტერის ფონი
 $body-bg: #fff;
 
 
@@ -18,6 +19,7 @@ $default-shade-dark: #353535;
 $default-tint-dark: #aaa;
 $shadow-color-dark: rgba(255, 255, 255, .2);
 $code-color-dark: #db1400;
+// ჰედერი და ფუტერის ფონი
 $body-bg-dark: #0F1216;
 
 
