--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,11 @@
 <nav>
-    <!-- <a href="{{ site.baseurl }}/" class="nav-title-link"> -->
+    <a href="{{ site.baseurl }}/" class="nav-title-link">
      <div class="nav-header">
         <img src="{{ site.url }}/assets/images/logo.webp" class="nav-logo nav-hitem" alt="Logo Image">
         <h2 class="nav-title nav-hitem">{{ site.title }}</h2>
         <p class="nav-description nav-hitem"> {{ site.description }}</p>
       </div>
-    <!-- </a> -->
+    </a>
     <ul class="nav-list">
       {% for link in site.links %}
       {% if  link.external %}
