--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,25 +2,53 @@
 layout: default
 ---
 
-<div class="catalogue">
-  {% for post in site.posts %}
-    {% if post.sticky %}
-      {% include catalogue_item.html sticky='true' %}
-    {% endif %}
-  {% endfor %}
-
-  {% for post in paginator.posts %}
-    {% include catalogue_item.html %}
-  {% endfor %}
+<div class="articles-container">
+    {% for article in site.home %}
+        <article class="article {{ article.alignment }}">
+            <header>
+                <h2><a href="{{ article.url }}">{{ article.title }}</a></h2>
+                <p>Автор: {{ article.author }} | Дата публикации: {{ article.date | date: "%-d %B %Y" }}</p>
+            </header>
+            
+            <figure>
+                <img src="{{ article.image }}" alt="{{ article.title }}">
+                <figcaption>{{ article.caption }}</figcaption>
+            </figure>
+            
+            <section>
+                {{ article.excerpt }}
+            </section>
+            
+            <footer>
+                <p>Категория: <a href="{{ site.baseurl }}/categories/{{ article.categories | first }}">{{ article.categories | first }}</a></p>
+                <p>Теги: {% for tag in article.tags %}<a href="{{ site.baseurl }}/tags/{{ tag }}">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}</p>
+            </footer>
+        </article>
+    {% endfor %}
 </div>
 
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="left arrow">&#8592;</a>
-  {% endif %}
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl }}" class="right arrow">&#8594;</a>
-  {% endif %}
+<style>
+.articles-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.article {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    background-color: #fff;
+}
+.article.left {
+    align-self: flex-start;
+}
+.article.right {
+    align-self: flex-end;
+}
+.article img {
+    max-width: 100%;
+    height: auto;
+}
+</style>
 
-  <span>{{ paginator.page }}</span>
-</div>
