--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,24 +2,24 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 // გავლილია
-@import 'variables';
+@import 'shared/variables';
 // გავლილია
-@import 'base';
+@import 'shared/base';
 // გავლილია
-@import 'code';
+@import 'shared/code';
 // გავლილია
-@import 'post';
+@import 'shared/post';
 // გავლილია  
-@import 'syntax';
+@import 'shared/syntax';
 //
-@import 'layout';
+@import 'shared/layout';
 // გავლილია
-@import 'pagination';
+@import 'shared/pagination';
 // ეს უნდა გავიარო, 
-@import 'catalogue';
+@import 'shared/catalogue';
 //
-@import '404';
+@import 'shared/404';
 //
-@import 'tags';
+@import 'shared/tags';
 
 
